--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,7 +110,7 @@ endif()
 # executables (any CPP file in 'bin' dir)
 foreach(EXEC ${EXECLIST})
   get_filename_component(EXECNAME ${EXEC} NAME_WE)
-  add_executable(${EXECNAME} ${EXEC} include/tile_map.h src/tile_map.cpp src/graphics/graphics_victory.cpp include/graphics/graphics_victory.h src/Animations/PlayerAnimation.cpp include/Animations/PlayerAnimation.h src/Animations/SkeletonAnimation.cpp include/Animations/SkeletonAnimation.h)
+  add_executable(${EXECNAME} ${EXEC})
 
   if(NOT SRC STREQUAL "")
     target_link_libraries(${EXECNAME} LINK_PUBLIC ${LIBNAME})
